--- a/FXExperienceTools/src/main/resources/fxml/FXMLPreviewPanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLPreviewPanel.fxml
@@ -29,7 +29,7 @@
 
 <StackPane id="Preview-area" prefHeight="600.0" prefWidth="590.0" stylesheets="@../styles/preview.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fxexperience.tools.controller.PreviewPanelController">
    <children>
-      <AnchorPane prefHeight="450.0" prefWidth="650.0">
+      <AnchorPane StackPane.alignment="CENTER">
          <children>
             <GridPane id="ContentPanel" fx:id="contentPanel" alignment="CENTER" hgap="2.0" layoutX="10.0" layoutY="75.0" maxHeight="-Infinity" maxWidth="-Infinity" vgap="2.0">
                <children>
